# code_helper

./: USAGE.md  pyproject.toml  spec.md
src/hpc_assistant/: __init__.py  main.py
src/hpc_assistant/api/: __init__.py  endpoints.py
src/hpc_assistant/models/: __init__.py  inference.py
src/hpc_assistant/orchestration/: __init__.py  phases.py  workflows.py
src/hpc_assistant/storage/: __init__.py  persistence.py
src/hpc_assistant/tools/: __init__.py  available_tools.py
tests/: test_api.py  test_workflow.py
