[tool.poetry]
name = "hpc-assistant"
version = "0.1.0"
description = "Self-hosted assistant server for research, analysis, coding, and report-driven workflows on HPC clusters."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.2"
vllm = "^0.3.0"
requests = "^2.31.0"
arxiv = "^2.0.0"
beautifulsoup4 = "^4.12.2"
# Add other dependencies from spec.md as needed, e.g., for email, semantic scholar
# For now, these are the core ones.

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
